force-app/main/default/objects/Integration_Entitlement__c/Integration_Entitlement__c.object-meta.xml
<CustomObject>
    <label>Integration Entitlement</label>
    <nameField>
        <label>Integration Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>