force-app/main/default/objects/Integration_Entitlement__c/fields/Active_Gateways_JSON__c.field-meta.xml
<CustomField>
    <fullName>Active_Gateways_JSON__c</fullName>
    <label>Active Gateways JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>