force-app/main/default/objects/Integration_Entitlement__c/fields/Cache_Key__c.field-meta.xml
<CustomField>
    <fullName>Cache_Key__c</fullName>
    <externalId>true</externalId>
    <label>Cache Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>