force-app/main/default/objects/Integration_Entitlement__c/fields/Fail_Policy__c.field-meta.xml
<CustomField>
    <fullName>Fail_Policy__c</fullName>
    <label>Fail Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fail Closed</fullName>
                <default>true</default>
                <label>Fail Closed</label>
            </value>
            <value>
                <fullName>Fail Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>