force-app/main/default/objects/Integration_Entitlement__c/fields/Last_Refreshed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Refreshed_At__c</fullName>
    <label>Last Refreshed At</label>
    <type>DateTime</type>
</CustomField>