force-app/main/default/objects/Integration_Entitlement__c/fields/Refresh_Status__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Status__c</fullName>
    <label>Refresh Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>