force-app/main/default/objects/Integration_Entitlement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Inactive</fullName><default>false</default><label>Inactive</label></value>
            <value><fullName>Unknown</fullName><default>true</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>