force-app/main/default/objects/Integration_Entitlement__c/fields/TTL_Minutes__c.field-meta.xml
<CustomField>
    <fullName>TTL_Minutes__c</fullName>
    <defaultValue>15</defaultValue>
    <label>TTL Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>